<?xml version="1.0"?>
<package format="2">
  <name>roslaunchd_navigation</name>
  <version>0.0.0</version>
  <description>Roslaunchd test workspace - Navigation package.</description>

  <maintainer email="lucas.chiesa@gmail.com">Lucas Chiesa</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>
